# stock-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPING.md  RUNBOOK.md
src/stock_mcp/: __init__.py  config.py  logging_setup.py  server.py
src/stock_mcp/adapters/: akshare_source.py  baostock_source.py  base.py  eastmoney.py  iwencai.py  registry.py  sina.py  tencent.py  tqcenter.py  yfinance_source.py
src/stock_mcp/cache/: sqlite_cache.py  ttl.py
src/stock_mcp/domain/: errors.py  models.py
src/stock_mcp/ratelimit/: token_bucket.py
src/stock_mcp/resilience/: circuit_breaker.py
src/stock_mcp/services/: fundamental_service.py  kline_service.py  news_service.py  query_service.py  quote_service.py
src/stock_mcp/tools/: __init__.py  admin.py  financial_statement.py  fundamental.py  kline.py  news.py  query.py  quote.py
tests/: conftest.py
tests/e2e/: test_mcp_server.py
tests/fixtures/: sina_realtime.json
tests/integration/akshare/: test_indicators.py
tests/integration/baostock/: test_real.py
tests/integration/eastmoney/: test_hk_us.py  test_news_endpoint.py
tests/integration/iwencai/: test_query_stocks.py
tests/integration/sina/: test_hk_us_realtime.py  test_http_realtime.py
tests/integration/tdxcenter/: test_real.py
tests/integration/tencent/: test_kline.py
tests/integration/tqcenter/: test_real.py
tests/integration/yfinance/: test_yfinance_real.py
tests/unit/: test_config.py  test_logging_setup.py  test_server.py
tests/unit/adapters/: test_akshare_adapter.py  test_baostock_adapter.py  test_base.py  test_eastmoney_adapter.py  test_iwencai_adapter.py  test_registry.py  test_sina_adapter.py  test_supported_markets.py  test_tencent_adapter.py  test_tqcenter_adapter.py  test_yfinance_adapter.py
tests/unit/cache/: test_sqlite_cache.py  test_ttl.py
tests/unit/domain/: test_errors.py  test_models.py
tests/unit/ratelimit/: test_token_bucket.py
tests/unit/resilience/: test_circuit_breaker.py
tests/unit/services/: test_fundamental_service.py  test_kline_service.py  test_news_service.py  test_query_service.py  test_quote_service.py  test_routing_priority.py
tests/unit/tools/: test_admin_tool.py  test_financial_statement_tool.py  test_fundamental_tool.py  test_kline_tool.py  test_news_tool.py  test_query_tool.py  test_quote_tool.py  test_tools_init.py
