[project]
name = "stock-mcp"
version = "0.1.0"
description = "A股股票数据 MCP 服务"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "pandas>=2.1",
    "aiosqlite>=0.19",
    "akshare>=1.12",
    "httpx>=0.26",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "mypy>=1.7",
    "ruff>=0.1",
    "freezegun>=1.4",
]
iwencai = [
    "pywencai>=0.12",
]

[project.scripts]
stock-mcp = "stock_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/stock_mcp"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle errors & warnings
# F: pyflakes (unused imports, undefined names)
# I: isort (import sorting)
# N: pep8-naming
# UP: pyupgrade (modern Python syntax)
# B: flake8-bugbear (likely bugs)
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/stock_mcp"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "aiosqlite.*", "pandas.*", "structlog.*", "respx.*", "freezegun.*", "ctypes.*"]
ignore_missing_imports = true
